--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             <input type="phone" class="form-control" placeholder="Введите Ваш телефон">
                         </div>
                         <button type="submit" class="btn btn-default">Отправить заявку</button>
-                            <p>Мы гарантируем конфиденциальность Ваших личных данных</p>
+                            <p class="warranty">Мы гарантируем конфиденциальность Ваших личных данных</p>
                     </form>
               </div>
           </section>
@@ -457,7 +457,7 @@
                   <div class="row">
                       <div class="block-news block-news-1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                           <div class="news-img">
-                              <img src="img/news1.jpg" alt="">
+                              <img src="img/news1.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
                               <span class="date1">21.</span>    
@@ -470,7 +470,7 @@
                       </div>
                       <div class="block-news block-news-2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                           <div class="news-img">
-                              <img src="img/news2.jpg" alt="">
+                              <img src="img/news2.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
                               <span class="date1">23.</span>    
@@ -483,7 +483,7 @@
                       </div>
                       <div class="block-news block-news-3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                           <div class="news-img">
-                              <img src="img/news3.jpg" alt="">
+                              <img src="img/news3.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
                               <span class="date1">21.</span>    
@@ -496,7 +496,7 @@
                       </div>
                       <div class="block-news block-news-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
                           <div class="news-img">
-                              <img src="img/news4.jpg" alt="">
+                              <img src="img/news4.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
                               <span class="date1">20.</span>    
