--- a/index.html
+++ b/index.html
@@ -455,8 +455,9 @@
               <div class="container">
                   <div class="wrapp_head"><h2>Новости</h2></div> 
                   <div class="row">
-                      <div class="block-news block-news-1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                          <div class="news-img">
+                      <div class="col-md-6">
+                          <div class="block-news">
+                            <div class="news-img">
                               <img src="img/news1.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
@@ -467,9 +468,11 @@
                               <h4>Лукашенко: диверсификация экспорта является важнейшим приоритетом.</h4>
                               <p>Данная тема была особо отмечена в ежегодном послании к Национальному собранию. Оборудование лаборатории позволяет </p>
                           </div>
+                          </div>
                       </div>
-                      <div class="block-news block-news-2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                          <div class="news-img">
+                      <div class="col-md-6">
+                        <div class="block-news">
+                           <div class="news-img">
                               <img src="img/news2.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
@@ -480,9 +483,11 @@
                               <h4>«ЭТАЛОН-СТАНДАРТ» – единый ресурс правовой и технической информации.</h4>
                               <p>В Минске прошел семинар-презентация возможностей новой информационной системы.  Оборудование лаборатории позволяет </p>
                           </div>
+                        </div>
                       </div>
-                      <div class="block-news block-news-3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                          <div class="news-img">
+                      <div class="col-md-6">
+                         <div class="block-news">
+                            <div class="news-img">
                               <img src="img/news3.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
@@ -493,9 +498,11 @@
                               <h4>Александр Лукашенко сомневается, нужна ли Беларуси ВТО.</h4>
                               <p>В Минске прошел семинар-презентация возможностей новой информационной системы.  Оборудование лаборатории позволяет </p>
                           </div>
+                         </div>
                       </div>
-                      <div class="block-news block-news-4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                          <div class="news-img">
+                      <div class="col-md-6">
+                         <div class="block-news">
+                            <div class="news-img">
                               <img src="img/news4.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="news-date">
@@ -506,6 +513,7 @@
                               <h4>Правительство Беларуси изменило перечень импортных товаров, допускаемых к госзакупкам.</h4>
                               <p>Данная тема была особо отмечена в ежегодном послании к Национальному собранию. Оборудование лаборатории позволяет </p>
                           </div>
+                         </div>
                       </div>
                       <div class="archive-news col-lg-12 col-md-12 col-sm-12 col-xs-12">
                           <a href="/">архив новостей</a>    
