--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -239,10 +241,10 @@
                     </div>
                     <!-- Controls -->
                     <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="glyphicon glyphicon-menu-left"></span>
                     </a>
                     <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="glyphicon glyphicon-menu-right"></span>
                     </a>
                 </div>
           </section>
@@ -559,7 +561,7 @@
                         <a href="#">Политика конфиденциальности и положение об обработке персональных данных.</a>
                         <a href="#">Договора-оферты (с правилами, условиями пожертвования и реквизитами)</a>
                       </div>
-                      <div class="footer-center col-md-2">
+                      <div class="footer-center col-sm-6 col-md-2">
                           <div class="foot-menu">
                               <ul>
                                   <li><a href="/">Главная</a></li>
@@ -569,7 +571,7 @@
                               </ul>
                           </div>    
                       </div>
-                      <div class="footer-right col-md-3">
+                      <div class="footer-right col-sm-6 col-md-3">
                           <p class="phone2">+3 7517 396 48 47</p>
                           <p class="phone2">+3 7517 284 00 81</p>
                           <a href="#" data-toggle="modal" data-target="#popup-call">Заказать обратный звонок</a> 
